[gd_scene load_steps=2 format=3 uid="uid://de6tgscvvbm8a"]

[ext_resource type="Script" path="res://Scripts/npc_talk_view.gd" id="1_2fmy4"]

[node name="NPC_TALK_VIEW" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2fmy4")

[node name="nameRect" type="ColorRect" parent="."]
layout_mode = 0
offset_top = 530.0
offset_right = 250.0
offset_bottom = 570.0

[node name="NameLabel" type="Label" parent="nameRect"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -14.0
offset_right = 172.0
offset_bottom = 14.0
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0.886275, 0.886275, 1)
theme_override_font_sizes/font_size = 28
text = "NamePlaceholder"
justification_flags = 0

[node name="dialogRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
color = Color(0.0509804, 0.0509804, 0.0509804, 0.211765)

[node name="DialogueLabel" type="RichTextLabel" parent="dialogRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = 33.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/normal_font_size = 30
theme_override_font_sizes/bold_font_size = 30
theme_override_font_sizes/italics_font_size = 30
theme_override_font_sizes/bold_italics_font_size = 30
theme_override_font_sizes/mono_font_size = 30
fit_content = true
scroll_active = false

[connection signal="resized" from="dialogRect/DialogueLabel" to="." method="_on_dialogue_label_resized"]
